# edgetpu-sample

./: README.md
edgetpu-class/: CMakeLists.txt  edgetpu-class.cpp
edgetpu-object/: CMakeLists.txt  edgetpu-object.cpp
